<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/loginRootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/loginScrollLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="24dp"
            android:paddingTop="16dp">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/tud_logo"
                android:src="@drawable/university_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="100dp"
                android:fontFamily="@font/aldrich"
                android:text="@string/welcome_back"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="23sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginUsernameLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/username"
                android:paddingBottom="8dp"
                app:boxStrokeColor="#EF6F6F"
                app:hintTextColor="#EF6F6F">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginPasswordLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/password"
                android:paddingBottom="8dp"
                app:boxStrokeColor="#EF6F6F"
                app:errorEnabled="true"
                app:hintTextColor="#EF6F6F"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginNextBtn"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:backgroundTint="#EF6F6F"
                    android:text="@string/next"
                    android:textColor="@android:color/white"
                    app:cornerRadius="45dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginCancelBtn"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_toStartOf="@id/loginNextBtn"
                    android:fontFamily="@font/rubik_medium"
                    android:text="@string/back"
                    android:textColor="#2E2222"
                    app:cornerRadius="45dp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
