<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/signLogoImage"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:contentDescription="@string/tud_logo"
        android:padding="10dp"
        android:src="@drawable/university_icon"
        app:layout_constraintBottom_toTopOf="@+id/registerBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerBtn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#00000000"
        android:fontFamily="@font/rubik_medium"
        android:padding="10dp"
        android:text="@string/create_new_account"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/loginBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="#BEBBBB"
        app:strokeColor="@android:color/black" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginBtn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#EF6F6F"
        android:fontFamily="@font/rubik_medium"
        android:padding="10dp"
        android:text="@string/log_in"
        android:textColor="#FAE2D8"
        android:textSize="15sp"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/signInMethods"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="#7F5858"
        app:strokeColor="#FB1F01" />


    <LinearLayout
        android:id="@+id/signInMethods"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/googleBtn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="7dp"
            android:layout_weight="1"
            android:backgroundTint="#F30909"
            android:fontFamily="@font/rubik_medium"
            android:padding="10dp"
            android:text="@string/google"
            android:textColor="#FAE2D8"
            android:textSize="13sp"
            app:cornerRadius="15dp"
            app:icon="@drawable/google"
            app:iconSize="17sp"
            app:iconTint="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/fbBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:rippleColor="#F3B9B9"
            app:strokeColor="#FB1F01" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fbBtn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginBottom="50dp"
            android:layout_weight="1"
            android:backgroundTint="#0396E6"
            android:fontFamily="@font/rubik_medium"
            android:padding="10dp"
            android:text="@string/facebook"
            android:textColor="#FAE2D8"
            android:textSize="13sp"
            app:cornerRadius="15dp"
            app:icon="@drawable/facebook_box"
            app:iconSize="17sp"
            app:iconTint="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:rippleColor="#81A9C7" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/rubik_medium_italic"
        android:text="@string/termsAndCond"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>